--- a/package.json
+++ b/package.json
@@ -57,7 +57,7 @@
     "prettier": "2.8.3",
     "reflect-metadata": "0.1.13",
     "release-it": "15.6.0",
-    "supertest": "6.3.3",
+    "supertest": "^6.3.3",
     "swagger-parser": "10.0.3",
     "ts-jest": "29.0.5",
     "typescript": "4.9.4"
